# seniordesign

./: .gitignore  CMakeLists.txt  README.md  arduinoLibrary.cpp  arduinoLibrary.sln  arduinoLibrary.vcxproj  arduinoLibrary.vcxproj.filters  libTest.cpp  support.h
arduinoCode/: arduinoCode.ino  support.h
guiCode/WindowsFormsApp1/: Fluids in Motion.csproj  Form1.Designer.cs  Form1.cs  Program.cs  WindowsFormsApp1.csproj  WindowsFormsApp1.sln  rotatingWindTunnel.sln  windowsGUI.Designer.cs  windowsGUI.cs
guiCode/WindowsFormsApp1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
sampleCode/accel_demo_modded/: accel_demo_modded.ino
sampleCode/load_cell/: load_cell.ino
sampleCode/load_cell_calibration/: load_cell_calibration.ino
sampleCode/xbee_test/: xbee_test.ino
